# files_downloader

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  LICENSE.txt  Makefile  README.md  main.py  pyproject.toml
data/input/: example.txt
files_downloader/: display.py  downloader.py  exception.py  handler.py  schema.py
files_downloader/reader/: abstract.py  file_reader.py
files_downloader/writer/: abstract.py  file_writer.py
tests/: conftest.py
tests/downloader/: test_downloader.py
tests/reader/: test_file_reader.py
tests/resources/input/: example.txt
tests/writer/: test_file_writer.py
