[tool.poetry]
name = "files_downloader"
version = "0.1.0"
description = ""
authors = ["Artur Siepietowski <artursiepietowski@gmail.com>"]
readme = "README.md"
packages = [{include = "files_downloader"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
aiohttp = "^3.8.3"
aiofile = "^3.8.1"
asyncstdlib = "^3.10.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pylint = "^2.15.3"
mypy = "^0.981"
flake8 = "^5.0.4"
isort = "^5.10.1"
black = "^22.8.0"
pre-commit = "^2.20.0"
pygount = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
